--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ import groovy.json.*
 pipeline {
   agent any
   tools {
-    gradle "gr7"
+    gradle "Gradle"
   }
   environment {
     //TESTPLAN = "${params.TESTPLAN}"
